# Mars_Terrain

./: README.md  package.xml  setup.cfg  setup.py
launch/: bridge.launch.py
martian_drone/: drone_control.py  keyboard_control.py  play_world.py
worlds/: FinalDrone.sdf
worlds/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
worlds/log/: latest_build
worlds/models/Mars_Gale_Crater_Patch_2/: model.config  model.sdf
worlds/models/Mars_Gale_Crater_Patch_2/materials/scripts/: gale_crater_patch2.material  rock_texture_1.material  sand_pebbles.material
worlds/models/Mars_Gale_Crater_Patch_2/meshes/: YellowBorder.dae
worlds/models/x3/: model.sdf
